--- a/style.css
+++ b/style.css
@@ -759,72 +759,83 @@ li{
     #about-us {
         font-size: 32px;
         text-align: center;
+        margin: 10px 0;
     }
 
     #about-paragraph {
         font-size: 18px;
         line-height: 1.6;
+        max-width: 90%;
+        margin: 0 auto;
     }
 
     #img {
         max-width: 80%;
-        margin: 0 auto;
+        height: auto;
+        margin: 10px auto;
     }
 
     .about {
+        display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
+        padding: 20px 0;
     }
 }
 
 @media screen and (max-width: 1000px) {
     #about-us {
         font-size: 28px;
+        margin: 10px 0;
     }
 
     #about-paragraph {
         font-size: 16px;
-        padding: 0 15px;
+        line-height: 1.5;
+        padding: 0 10px;
+        max-width: 85%;
     }
 
     #img {
         max-width: 90%;
+        margin: 10px auto;
     }
 }
 
 @media screen and (max-width: 800px) {
     #about-us {
         font-size: 24px;
+        margin: 10px 0;
     }
 
     #about-paragraph {
-        font-size: 14px;
-    }
-
-    .about {
-        padding: 20px 10px;
+        font-size: 15px;
+        padding: 0 10px;
+        line-height: 1.5;
+        max-width: 90%;
     }
 
     #img {
-        max-width: 100%;
+        max-width: 95%;
     }
 }
 
 @media screen and (max-width: 600px) {
     #about-us {
         font-size: 20px;
-        text-align: center;
+        margin: 10px 0;
     }
 
     #about-paragraph {
-        font-size: 13px;
-        padding: 10px;
-        line-height: 1.5;
+        font-size: 14px;
+        line-height: 1.4;
+        padding: 0 10px;
+        max-width: 95%;
     }
 
     #img {
-        max-width: 100%;
+        width: 100%;
         height: auto;
         margin-bottom: 15px;
     }
@@ -833,21 +844,26 @@ li{
 @media screen and (max-width: 400px) {
     #about-us {
         font-size: 18px;
+        margin: 10px 0;
     }
 
     #about-paragraph {
-        font-size: 12px;
+        font-size: 13px;
+        line-height: 1.3;
+        padding: 0 5px;
+        max-width: 95%;
     }
 
     #img {
         width: 100%;
+        height: auto;
+        margin-bottom: 15px;
     }
 
     .about {
-        text-align: center;
+        padding: 10px 0;
     }
 }
-
 
 @media screen and (max-width: 1235px) {
     .pricing {
